--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue": "^3.3.4"
     },
     "dependencies": {
-        "@inertiajs/vue3": "^1.0.10"
+        "@inertiajs/vue3": "^1.0.10",
+        "lodash": "^4.17.21"
     }
 }
